--- a/css/style.css
+++ b/css/style.css
@@ -21,27 +21,27 @@ body {
 
 #content {
   padding: 20px;
-  background: rgba(255,255,255,.85);
+  background-color: #F5EBE0;
 }
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: goldenrod;
 }
 
 h1 {
-  font-size: 3.5em;
+  font-size: 3.8em;
   margin-bottom: 0;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.8em;
   margin-top: .5em;
 }
 
 h3 {
   font-family: 'Gabriela', serif;
-  font-size: 1.5em;
+  font-size: 1.8em;
   margin-top: .5em;
 }
 
